Refactoring pour resultats_calcul.py

--- a/snippets/extractions_minor-major/Stats_models_BV.ipynb
+++ b/snippets/extractions_minor-major/Stats_models_BV.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "scenario = study.get_scenario('Sc_Halimatou')\n",
     "run = scenario.get_last_run()\n",
-    "results = run.get_results()"
+    "results = run.get_resultats_calcul()"
    ]
   },
   {
